<resources>
    <string name="app_name">Photograd</string>
    <string name="photograd">PhotoGrad</string>
    <string name="login_choose_lang">Выберите язык</string>
    <string name="login_russian">Русский</string>
    <string name="login_kazakh">Қазақша</string>
    <string name="login_english">English</string>
    <string name="login_to_continue">Продолжить</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="login_registration">Регистрация</string>
    <string name="login_login">Войти</string>
    <string name="login_or">или</string>
    <string name="login_agreement_begin">Авторизуясь, Вы соглашаетесь со следующими документами: </string>
    <string name="login_user_agreement_begin">Пользовательское соглашение</string>
    <string name="login_privacy_policy">Политика конфиденциальности.</string>
    <string name="login_swipe_to_right">Смахните вправо для возвращение\nна страницу Входа</string>
    <string name="login_sign_up">Зарегистрироваться</string>
    <string name="current_games_opponent_turn">Ход соперника</string>
    <string name="current_games_your_turn">Ваш ход</string>
    <string name="current_games_mission">Миссия</string>
    <string name="current_games_round">Раунд</string>
    <string name="current_games_sponsored_by">sponsored by</string>
    <string name="tab_current_games">Текщие игры</string>
    <string name="tab_missions">Миссии</string>
    <string name="tab_duels">Дуэли</string>
    <string name="tab_statistic">Статистика</string>
    <string name="tab_achievements">Достижения</string>
    <string name="tab_games_history">История игр</string>
    <string name="tab_top_rating">ТОП Рейтинг</string>
    <string name="tab_friends_rating">Рейтинг Друзей</string>
    <string name="tab_base_settings">Основные</string>
    <string name="tab_profile">Профиль</string>
    <string name="apples">Яблоки</string>
    <string name="duels_tutorial">Дуэли</string>
    <string name="missions_tutorial">Миссии</string>
    <string name="game_round">Раунд</string>
    <string name="game_your_turn">Ваш ход</string>
    <string name="game_play">Играть</string>
    <string name="game_photograd_mission_progress">Сыграно %1$s  Побед %2$s</string>
    <string name="offer_flow_buy">Купить</string>
    <string name="offer_rating_base_on">%1$s на основе %2$s отзывов</string>
    <string name="offer_reviews_count">%1$s отзывов</string>
    <string name="offer_reviews">Отзывы</string>
    <string name="base_settings_our_contacts">Наши контакты</string>
    <string name="base_settings_chat">Настройки чата</string>
    <string name="base_settings_content">Настройки контента</string>
    <string name="base_settings_app">Настройки приложения</string>
    <string name="base_settings_language">Язык</string>
    <string name="base_settings_city">Город</string>
    <string name="base_settings_background">Фон</string>
    <string name="base_settings_sound">Звук</string>
    <string name="base_settings_chat_mode">Режим чата</string>
    <string name="base_settings_limited">Ограниченный</string>
    <string name="base_settings_russian">Русский</string>
    <string name="base_settings_almaty">Алматы</string>
    <string name="base_settings_dynamic">Динамичный</string>
    <string name="base_settings_static">Статичный</string>
    <string name="base_settings_off">Выкл.</string>
    <string name="base_settings_on">Вкл.</string>
    <string name="profile_user_id">ID игрока</string>
    <string name="profile_phone_number">Номер телефона</string>
    <string name="profile_birthday">Дата рождения</string>
    <string name="profile_gender">Пол</string>
    <string name="profile_username">Имя пользователя</string>
    <string name="profile_not_given">Не задан</string>
    <string name="about_photograd">
        Фото-викторина про город Алматы. Докажите всем, что именно Вы достойны звания"\"Настоящий Алматинец\"!
    </string>
    <string name="about_apples">
       "Играйте и зарабатывайте яблоки. На них можно купить реальные товары или услуги от наших партнеров в разделе \"Магазин\".
    </string>
    <string name="about_duels">
        Режим "Дуэль" предназначен для состязаний с друзьями и близкими. Выясните, кто знает город лучше!
    </string>
    <string name="about_missions">
        Стандартные Миссии от Photograd позволяют зарабатывать яблоки в любое время
    </string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="drop_password">Сбросить пароль?</string>
    <string name="restore_password_instruction">На данный электронный адрес будет выслана ссылка, по которой Вы сможете сменить пароль</string>
    <string name="authorization_warning">Авторизуясь, Вы соглашаетесь со следующими документами: </string>
    <string name="activation_warning">Покупку необходимо своевременно использовать в течение времени, указанного ниже. Подробнее с правилами пользовательского поведения Вы можете ознакомиться в статье 6</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="user_name">Имя пользователя</string>
    <string name="check_email_title">Пожалуйста, проверьте почту.</string>
    <string name="check_email">Инструкция по сбросу пароля будет выслана в течении 5 минут.</string>
    <string name="facebook_app_id">205368653432525</string>
    <string name="fb_login_protocol_scheme">fb205368653432525</string>
    <string name="login_types">Авторизуясь, Вы соглашаетесь со следующими документами: Пользовательское соглашение и политика конфеденциальности</string>
    <string name="games">Игры</string>
    <string name="profile">Профиль</string>
    <string name="ratings">Рейтинги</string>
    <string name="settings">Настройки</string>
    <string name="edit">Изменить</string>
    <string name="store"> Магазин </string>
    <string name="energy">Энергия</string>
    <string name="duel">Дуэль</string>
    <string name="mission">Миссия</string>
    <string name="photograd_mission">Миссия Photograd</string>
    <string name="partner_mission">Партнерская миссия</string>
    <string name="before_refreshing">До восполнения +1</string>
    <string name="energy_description">Энергия - возобновляемый ресурс, который используется для участия в играх. Разные типы игр потребляют разное количество энергии</string>
    <string name="not_enough_energy">У Вас недостаточно энергии для игры!</string>
    <string name="current_games">ТЕКУЩИЕ ИГРЫ</string>
    <string name="missions">МИССИИ</string>
    <string name="duels">ДУЭЛИ</string>
    <string name="your_turn_vs">Ваш ход против</string>
    <string name="opponent_turn">Идет ход соперника</string>
    <string name="round">раунд %1$s</string>
    <string name="default_network_error_message">Отсутствует соединение с интернетом.</string>
    <string name="default_unexpected_error_message">Неизвестная ошибка на сервере.</string>
    <string name="default_error_message">Ошибка соединения с сервером.</string>
    <string name="timed_out">Время запроса истекло.</string>
    <string name="network_connection_lost">Прервано соединение с интернетом.</string>
    <string name="bad_server_response">Неверный ответ с сервера.</string>
    <string name="server_error">Непредвиденная ошибка на сервере.</string>
    <string name="try_again">Пожалуйста, попробуйте еще раз.</string>
    <string name="bad_connection">Не получилось загрузить изображение. Проверьте интернет соеденение</string>
    <string name="empty_fields">Обязательные поля не зполнены</string>
    <string name="unknown_error">Произошла неизвестная ошибка.</string>
    <string name="unknown_error_from_backend">Произошла ошибка на сервере. Пожалуйста, обновите приложение</string>
    <string name="mission_description">Одержи %1$s побед в %2$s играх и получи гарантированный приз</string>
    <string name="plus_apples">+ %1$s</string>
    <string name="reward">НАГРАДА</string>
    <string name="sponsored_by">sponsored by</string>
    <string name="time_remain">%1$s д. %2$s:%3$s:%4$s</string>
    <string name="short_time_remain">%1$s:%2$s</string>
    <string name="short_date_remain">%1$s д. %2$s ч.</string>
    <string name="time_hms_remain">%1$s:%2$s:%3$s</string>
    <string name="player_not_defined">Игрок не определен</string>
    <string name="player_not_defined_short">Не определен</string>
    <string name="activate">Активировать</string>
    <string name="field_for_activation_code">Поле для кода активации</string>
    <string name="enter_activation_code">Введите код активации</string>
    <string name="for_admin_of_partner">Поле для администратора</string>
    <string name="activation_code_instruction">Введите 4-значный код активации. Код известен представителю «%1$s», пожалуйста, позвольте ему ввести код с Вашего устройства!</string>
    <string name="hidden">СКРЫТО</string>
    <string name="play">Играть</string>
    <string name="continue_mission">Продолжить</string>
    <string name="start_mission">Начать миссию</string>
    <string name="sure_surrender">Вы действительно хотите сдаться в этой игре?</string>
    <string name="yes">Да</string>
    <string name="ok">OK</string>
    <string name="no">Нет</string>
    <string name="revenge">Предложить реванш</string>
    <string name="with_score">СО СЧЁТОМ</string>
    <string name="random_opponent_duels">Случайный\nсоперник</string>
    <string name="mission_start_game">Начать игру</string>
    <string name="top_50">ТОП-50</string>
    <string name="friends">Рейтинг друзей</string>
    <string name="games_stats">Статистика игр</string>
    <string name="sound">Выключить\nзвук</string>
    <string name="dynamic_background">Динамичный\nфон</string>
    <string name="change_theme">Сменить\nтему</string>
    <string name="user_information">Пользовательские данные</string>
    <string name="add_question">Добавить\nвопрос</string>
    <string name="birth_date">Дата рождения</string>
    <string name="sex">Пол</string>
    <string name="not_confirmed">(не подтверждена)</string>
    <string name="send">Отправить</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="not_given">Не задан</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="link_change_password">ссылку с изменением пароля</string>
    <string name="our_instagram">наш Инстаграм</string>
    <string name="for_feedback">Для обратной связи:</string>
    <string name="send_message_title">Написать компании Photograd</string>
    <string name="write_to_email_suggestion">Также Вы можете написать нам на почту:</string>
    <string name="photograd_email">help@photograd.kz</string>
    <string name="exit">Выход</string>
    <string name="true_almatian">Настоящий Алматинец</string>
    <string name="average_right_answers_count">Среднее количество\nправильных ответов</string>
    <string name="played_games">Сыграно игр</string>
    <string name="right_answers_by_category">Правильные ответы по категориям</string>
    <string name="draws">Ничьи</string>
    <string name="losses">Поражения</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="jule">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
</resources>