<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".home.profile.presentation.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_questions"
                android:layout_width="match_parent"
                style="@style/BaseSettingsStyle"
                android:layout_height="100dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_chat"
                style="@style/BaseSettingsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/BaseSettingsSubTitleStyles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_username_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_username"
                    app:layout_constraintStart_toStartOf="@id/tv_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/BaseSettingsSubTitleStyles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/profile_gender"
                    app:layout_constraintStart_toStartOf="@+id/tv_username_value"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username_value" />

                <TextView
                    android:id="@+id/tv_gender_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_gender"
                    app:layout_constraintStart_toStartOf="@+id/tv_gender"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender" />

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_birthday"
                    app:layout_constraintTop_toBottomOf="@id/tv_gender_value"
                    app:layout_constraintStart_toStartOf="@id/tv_gender_value"
                    android:layout_marginTop="8dp"
                    style="@style/BaseSettingsSubTitleStyles"/>

                <TextView
                    android:id="@+id/tv_birthday_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_birthday"
                    app:layout_constraintTop_toBottomOf="@id/tv_birthday"
                    app:layout_constraintStart_toStartOf="@id/tv_birthday"/>

                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_phone_number"
                    app:layout_constraintTop_toBottomOf="@id/tv_birthday_value"
                    app:layout_constraintStart_toStartOf="@id/tv_birthday_value"
                    android:layout_marginTop="8dp"
                    style="@style/BaseSettingsSubTitleStyles"/>

                <TextView
                    android:id="@+id/tv_phone_number_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_phone_number"
                    app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
                    app:layout_constraintStart_toStartOf="@id/tv_phone_number"/>


                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="@dimen/profile_img_size"
                    android:layout_height="@dimen/profile_img_size"
                    app:testImg="@{``}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_user_id"
                    style="@style/BaseSettingsSubTitleStyles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_user_id"
                    app:layout_constraintEnd_toEndOf="@id/img_user"
                    app:layout_constraintStart_toStartOf="@id/img_user"
                    app:layout_constraintTop_toBottomOf="@+id/img_user" />

                <TextView
                    android:id="@+id/tv_user_id_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/tv_user_id"
                    app:layout_constraintStart_toStartOf="@+id/tv_user_id"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_id" />

                <ImageButton
                    android:id="@+id/btn_edit"
                    style="@style/DarkBtnStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_duel_energy"
                    app:layout_constraintStart_toStartOf="@+id/tv_phone_number_value"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone_number_value" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>
</layout>